--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -346,6 +346,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 /*Skills*/
 .skill {
+  background: linear-gradient(135deg, #151515, #1c1c1c, #2a2a2a);
   padding: 0 0 50px 0;
   position: relative;
 }
