--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -499,16 +499,14 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .proj-txtx span {
   font-style: italic;
   font-weight: 400;
-  font-size: 15px;
+  font-size: 1rem; /* Use relative units */
   letter-spacing: 0.8px;
 }
-.background-image-right {
-  top: 20%;
-  position: absolute;
-  bottom: 0;
-  width: 35%;
-  right: 0;
-  z-index: -4;
+
+.proj-link {
+  text-decoration: none;
+  color: inherit;
+  display: block;
 }
 
 /*Contact*/
@@ -665,4 +663,28 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   color: #b8b8b8;
   letter-spacing: 0.5px;
   margin-top: 20px;
+}
+
+/*responsive*/
+/* Responsive adjustments */
+@media (max-width: 1200px) {
+  .background-image-right {
+    width: 50%;
+  }
+}
+
+@media (max-width: 768px) {
+  .background-image-right {
+    width: 70%;
+  }
+
+  .proj-txtx span {
+    font-size: 0.875rem; /* Adjust font size for smaller screens */
+  }
+}
+
+@media (max-width: 576px) {
+  .proj-txtx span {
+    font-size: 0.75rem; /* Further adjust font size for very small screens */
+  }
 }
